# mushr_gp

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: config.yaml  parameters.yaml
launch/: gp.launch  planner.launch  real.launch  sim.launch
scripts/: planner_node
src/: planner.cpp  planner.py
