<?xml version="1.0"?>
<package format="2">
  <name>mushr_gp</name>
  <version>1.0.0</version>
  <description>Global Planner</description>
  <author>Madison Doerr</author>
  <author>Markus Schiffer</author>
  <author>Matt Schmittle</author>

  <maintainer email="schmttle@cs.washington.edu">Schmittle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>OpenCV></build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>pysbpl</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <export>

  </export>
</package>
